refactor(auth): flatten tenant discovery and modernize SSO config services
Tenant discovery's triple-nested orElseGet chain with four duplicated
response builders becomes small named steps: existing account first
(authoritative — an inactive tenant ends discovery), then domain-based
fallbacks via Optional.or. Both SSO config services move to toList(),
StringUtils.hasText, Locale.ROOT lowercasing and proper imports; unused
base-domain property removed.

CU-86ak52ttd